style.css
/* ... */
#checkoutBtn:active{
    background-color: #bbb4ad;
}


/* Styles for footer */
footer {
    padding: 30px 0;
    background-color: var(--logoDarkBlue);
}
footer .flex {
    align-items: center;
    justify-content: space-between;
}
.footer-nav h2 {
    font-family: "Koh Santepheap", serif;
    color: var(--white);
}
.footer-nav ul {
    list-style-type: none;
}
.footer-nav ul li a {
    text-decoration: none;
    color: var(--white);
}
.footer-nav ul li a:hover {
    color: var(--blue);
    transition: .15s;
}
.right-side.flex {
    justify-content: end;
    flex-direction: column;
}
.socials {
    margin-bottom: 15px;
    color: var(--white);
}
.socials .flex {
    justify-content: space-evenly;
}
.socials p, .subscribe p {
    text-align: center;
    color: var(--white);
}
.socials a {
    color: var(--white);
    font-size: 150%;
    margin-top: 5px;
}
.socials a:hover {
    color: var(--blue);
    transition: .15s;
}
.subscribe input {
    display: block;
    margin: 5px auto;
    margin-right: 10px;
    border: 2px solid var(--logoDarkBlue);
    padding: 8px;
    font-family: "Koh Santepheap", serif;
    color: #424141;
    background-color: var(--white);
    border-radius: .5em;
}
.copyright {
    padding-top: 3em;
    text-align: center;
    font-size: 80%;
    color: var(--white);
}


/* Styles for LTO Page */
#item-list h1 {
    margin-top: 25px;
}
.item-section {
    margin: 10px 0;
    padding: 10px;
    border: 3px solid var(--logoDarkBlue);
    border-radius: 1em;
}
.lto-item {
    width: 80%;
    margin: 10px auto;
}
.lto-item .flex {
    align-items: center;
    justify-content: space-between;
    text-align: left;
}
.lto-item .itemName {
    width: 60%;
}
.lto-item .itemPrice {
    width: 20%;
}
.lto-item .ltoBtn {
    width: 20%;
}
.ltoBtn {
    margin: 0 5px;
}

/* Media query for 1200px */
@media screen and (max-width: 1200px), print {
    .navbar li {
        width: 15%;
    }
}


/* Media query for 900px */
@media screen and (max-width: 900px), print {
    #menu {
        padding: 20px 10px;
    }
    .item {
        display: block;
        width: 100%;
        margin: 10px 0;   
    }
    .item h2 {
        margin-top: 5px;
    }
    #cartHeading h1 {
        padding: 20px 0px 0px 20px;
    }
}


/* Media queiries for 750px */
@media screen and (max-width: 750px), print {
    .mobile-nav {
        display: block;
    }
    .navigation {
        display: none;
    }
    h1 {
        line-height: 1.1em;
    }
    section {
        padding: 15px
    }
    .container {
        width: 100%;
    }

    /* Styles for mobile nav */
    header {
        position: fixed;
        top: 0;
        width: 100%;
    }
    .mobile-navbar {
        display: flex;
        justify-content: space-around;
        align-items: center;
    }
    .mobile-navbar a {
       color: var(--logoDarkBlue);
        font-family: "Averia Sans Libre", sans-serif;
        font-size: 200%;
        font-weight: 600;
        text-decoration: none;
    }
    .bar {
        display: block;
        width: 35px;
        height: 4px;
        margin: 6px 0;
        border-radius: 1em;
        transition: all 0.3s ease;
        background-color: var(--logoDarkBlue);
    }
    .hamburger {
        cursor: pointer;
    }
    .hamburger.active .bar:nth-child(2) {
        opacity: 0;
    }
    .hamburger.active .bar:nth-child(1) {
        transform: translateY(10px) rotate(-45deg);
    }
    .hamburger.active .bar:nth-child(3) {
        transform: translateY(-10px) rotate(45deg);
    }
    .mobile-nav-list {
        position: fixed;
        top: -100%;
        gap: 0;
        flex-direction: column;
        background-color: var(--logoBlue);
        width: 100%;
        text-align: center;
        transition: 0.3s;
        border-bottom: 3px solid var(--logoDarkBlue);
    }
    .mobile-nav-list li {
        margin: 16px 0;
    }
    .mobile-nav-list a {
        text-decoration: none;
        font-size: 150%;
        color: var(--logoDarkBlue);
        font-family: "Averia Sans Libre", sans-serif;
        font-weight: 600;
    }
    .mobile-nav-list.active {
        top: 0;
    }
    #about, #rewards {
        margin-top: 140px;
    }
    #menuContainer {
        margin-top: 110px;
    }
    #lto {
        margin-top: 110px;
    }


    /* Styles for flexboxes */
    #about .flex {
        display: block;
    }
    .about-item {
        width: 100%;
    }
    .deals-card {
        width: 100%;
        margin: 25px 0;
    }
    .deals-card img {
        max-width: 100%;
    }
    footer div.container.flex {
        flex-direction: column;
    }    


    /* Style rules for menu */
    .itemContainer {
        display: block;
        width: 100%;
        margin: 0;
    }
    #cartContainer {
        width: 50%;
    }


    /* Styles for lto */
    .lto-item .flex {
        width: 100%;
        flex-wrap: wrap;
        text-align: center;
    }
    .lto-item .itemName,  .lto-item .itemPrice {
        width: 50%;
    }
    .lto-item .ltoBtn {
        width: calc(50% - 10px);
        margin-top: 5px;
    }


    /* Style rules for footer */
    .footer-nav {
        display: none;
    }
    footer div.right-side.flex {
        margin-top: 15px;
    }
    .socials a {
        font-size: 200%;
    }
}

